exports[`TimeProgress renders a stopwatch when in stopwatch moder 1`] = `
<div
  style={
    Object {
      "background": "var(--Clouds)",
    }
  }>
  <div
    style={
      Object {
        "background": "var(--Clouds)",
        "height": 50,
        "whiteSpace": "nowrap",
        "width": "50%",
      }
    } />
</div>
`;

exports[`TimeProgress renders a timer when in timer moder 1`] = `
<div
  style={
    Object {
      "background": "var(--Clouds)",
    }
  }>
  <div
    style={
      Object {
        "background": "var(--Concrete)",
        "height": 50,
        "whiteSpace": "nowrap",
        "width": "50%",
      }
    } />
</div>
`;
